[package]
name = "abdala-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
digest = "0.10.7"
serde = { version = "1.0.214", features = ["derive"] }
sha256 = "1.5.0"
sha2 = "0.10.8"
serde_json = "1.0.132"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
anyhow = "1.0.91"
wasmtime = { version = "26.0.1", default-features = false, features = ["cache", "cranelift", "wat", "parallel-compilation", "pooling-allocator"] }


